--- a/backend/package.json
+++ b/backend/package.json
@@ -32,9 +32,11 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.10.0",
     "prisma": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
