--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,6 +25,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["*.ts"],
+  "include": ["*.ts", "auth/auth.routes.ts"],
   "exclude": ["node_modules", "dist"]
 }
