--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL=mongodb+srv://takowbrilliant25_db_user:myMGXPLDEdRT9UpT@crowdfundme.w1f5rix.mongodb.net/cancercare
+PRISMA_CLIENT_ENGINE_TYPE=binary
 
 # JWT
 JWT_SECRET=your_jwt_secret_key_change_this_in_production
