--- a/backend/.env
+++ b/backend/.env
@@ -14,6 +14,7 @@ PAYSTACK_SECRET_KEY=your_paystack_secret_key
 
 # MTN Payment Configuration
 MTN_API_KEY=your_mtn_api_key
+MTN_API_USER=your_mtn_api_user
 MTN_API_SECRET=your_mtn_api_secret
 MTN_SUBSCRIPTION_KEY=your_mtn_subscription_key
 MTN_PRIMARY_KEY=1587f7e4f681472882b11545187a92ee
