--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,9 @@
 DATABASE_URL=your_database_url_here
 PRISMA_CLIENT_ENGINE_TYPE=binary
 
-JWT_SECRET=your JWT
+JWT_SECRET=your_jwt_secret
+ADMIN_USERNAME=your_admin_username
+ADMIN_PASSWORD=your_admin_password
 
 PORT=3000
 NODE_ENV=development
