--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,4 +21,4 @@ PAYMENT_ENV=sandbox
 
 HOSPITAL_VERIFICATION_CODE=HOSPITAL_VERIFICATION_CODE
 
-ALLOWED_ORIGINS=your_allowed_origins_comma_separated
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://cancercarefund.care
